--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
     "express": "4.17.1",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
