--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
     "express": "4.17.1",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nrwl/cli": "13.3.1",
