--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
     "bootstrap-icons": "^1.7.2",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-redux": "^7.2.6",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
